JumpScript/tests/baselines/reference/parserSkippedTokens11.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens11.jump(1,3): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens11.jump(1,5): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens11.jump(1,7): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens11.jump (3 errors) ====
    ; \ \ \ 
      
!!! error TS1127: Invalid character.
        
!!! error TS1127: Invalid character.
          
!!! error TS1127: Invalid character.